# py_canape

./: .gitignore  README.md  canape_interface.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: direct_workstation_usage_zh.md
docs/superpowers/plans/: 2026-07-14-direct-workstation-interface.md  2026-07-14-python36-compatibility.md
docs/superpowers/specs/: 2026-07-14-direct-workstation-interface-design.md  2026-07-14-python36-compatibility-design.md
examples/: direct_workstation_usage.py
tests/: test_direct_interface.py  test_python36_compatibility.py
