[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools==59.6.0", "wheel==0.37.1"]

[tool.black]
include = '^/((docs|src)/.*|setup)\.pyi?$'

[tool.mypy]
show_error_codes = true
ignore_missing_imports = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_unused_ignores = false
warn_redundant_casts = true
disallow_any_generics = true
disallow_subclassing_any = true
exclude = [
    "^docs/.*",
    '^.*venv/.*',
]


[[tool.mypy.overrides]]
module = [
    "psutil",
]
ignore_missing_imports = true

[tool.ruff]
# Ruff 0.0.284 cannot express Python 3.6; Python 3.7 is its oldest target.
target-version = "py37"
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",  # pycodestyle
    "EM",  # flake8-errmsg
    "F",  # pyflakes
    "G",  # flake8-logging-format
    "I",  # isort
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "RSE",  # flake8-raise
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
    "W",  # pycodestyle
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.isort]
known-first-party = ["pycanape"]
