[metadata]
name = pyCANape
version = 0.6.2
description = Pythonic wrapper around the VECTOR CANape API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Artur Drogunow
author_email = artur.drogunow@zf.com
url = https://github.com/Thri1ly/py_canape
project_urls =
    Documentation = https://pycanape.readthedocs.io
    Issues = https://github.com/Thri1ly/py_canape/issues
    Source = https://github.com/Thri1ly/py_canape
keywords = CANape, Measurement, Calibration, automotive
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy==1.19.5; python_version < "3.7"
    numpy>=1.21; python_version >= "3.7"
    psutil==5.9.8; python_version < "3.7"
    psutil>=5.9.8; python_version >= "3.7"
    backports.cached-property==1.0.2; python_version < "3.8"
    typing-extensions==4.1.1; python_version < "3.8"

[options.packages.find]
where = src

[options.package_data]
pycanape = py.typed

[options.extras_require]
dev =
    black==23.7.*; python_version >= "3.8"
    ruff==0.0.284; python_version >= "3.7"
    mypy==1.3.*; python_version >= "3.7"
    pre-commit
doc =
    furo
    sphinx==7.1.*
